--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,19 @@
 .App {
   text-align: center;
 }
-
+.black-nav {
+  display:  flex;
+  background: black;
+  color:white
+}
+div {
+  box-sizing: border-box
+}
+.list{
+  padding-left: 20px;
+  text-align: left;
+  border-bottom: 1px solid grey;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
